# Bsc_CH_NN_Solving

./: .gitignore  JCP.org  README.md  REviewonCH.org  Thesis.org  Thesis.tex  alg.py  datagen.py  maxima.org  multi_solver.py  multi_solver_relaxed.py  notes.org  plot_data.py  plot_mass_balance.py  pyproject.toml  shell.nix  simple_solver.org  tasks.org  test.py  testUtils.py  testing.org
data/smooth_experiments/: smooth_snapshot.npy
testing/: test.py
testing/data/: testdata.npz
