[tool.poetry]
name = "cahn-hillard-utils"
version = "0.0.0"
description = "Utility functions and Solvers for a simplified Cahn Hillard Equation for a b.sc thesis"
authors = ["Jonathan Ulmer <jonathan.ulmer@ulmail.de>"]
license = "Gpl"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8, < 3.11"
numpy = "*"
matplotlib = "*"
tensorflow = "^2.12.0"

[tool.poetry.dev-dependencies]
python-lsp-server = "^1.7.4"
pylsp-rope = "^0.1.11"
pylsp-autoimport = "^0.1.0"
jedi = "*"
python-lsp-black = "^1.3.0"
python-lsp-ruff = "^1.5.1"
pylsp-mypy = "^0.6.7"
debugpy = "^1.6.7"
pyls-spyder = "^0.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
