[tool.poetry]

name = "cahn-hillard-utils"
version = "0.0.0"
description = "Utility functions and Solvers for a simplified Cahn Hillard Equation for a b.sc thesis"
authors = ["Jonathan Ulmer <jonathan.ulmer@ulmail.de>"]
license = "Gpl"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.*"
numpy = "*"
matplotlib = "*"
tensorflow = "^2.12.0"
seaborn = "^0.13.0"
pandas = "^2.1.1"
numba = "^0.58.1"
scipy = "^1.11.3"
tqdm = "*"

[tool.poetry.dev-dependencies]
pydantic = "*"
python-lsp-server = "^1.7.4"
pylsp-autoimport = "^0.1.0"
jedi = "*"
python-lsp-black = "^1.3.0"
python-lsp-ruff = "^1.5.1"
pylsp-mypy = "^0.6.7"
debugpy = "^1.6.7"
pyls-spyder = "^0.4.0"
epc = "^0.0.5"
orjson = "^3.9.10"
sexpdata = "^1.0.1"
six = "^1.16.0"
paramiko = "^3.3.1"
rapidfuzz = "^3.4.0"
black = "^23.11.0"

[tool.mypy]
plugins = [
  "pydantic.mypy"
]

follow_imports = "silent"
warn_redundant_casts = true
warn_unused_ignores = true
disallow_any_generics = true
check_untyped_defs = true
no_implicit_reexport = true

# for strict mypy: (this is the tricky one :-))
disallow_untyped_defs = true

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

